// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlowsheetResultCell paddingStyle should render when given compact 1`] = `
<div
  className="flowsheet-result-cell padding-compact"
>
  <div
    className="single-result-display"
    key="ClinicalResultDisplay-111"
  >
    <ClinicalResult
      hasResultError={false}
      hasResultNoData={false}
      hideUnit={false}
      isTruncated={true}
      key="ClinicalResult-111"
      resultData={
        Object {
          "eventId": "111",
          "result": Object {
            "unit": "mL",
            "value": "12345.678",
          },
        }
      }
    />
  </div>
  <div
    className="additional-results-display add-end-accessory-space"
    key="AdditionalResultsDisplay-111"
  >
    <div
      className="additional-results-stack"
    >
      <span
        className="additional-results-value"
      >
        2
      </span>
      <span
        className="additional-results-value"
      >
        2
      </span>
    </div>
  </div>
</div>
`;

exports[`FlowsheetResultCell paddingStyle should render when given none 1`] = `
<div
  className="flowsheet-result-cell"
>
  <div
    className="single-result-display"
    key="ClinicalResultDisplay-111"
  >
    <ClinicalResult
      hasResultError={false}
      hasResultNoData={false}
      hideUnit={false}
      isTruncated={true}
      key="ClinicalResult-111"
      resultData={
        Object {
          "eventId": "111",
          "result": Object {
            "unit": "mL",
            "value": "12345.678",
          },
        }
      }
    />
  </div>
  <div
    className="additional-results-display add-end-accessory-space"
    key="AdditionalResultsDisplay-111"
  >
    <div
      className="additional-results-stack"
    >
      <span
        className="additional-results-value"
      >
        2
      </span>
      <span
        className="additional-results-value"
      >
        2
      </span>
    </div>
  </div>
</div>
`;

exports[`FlowsheetResultCell paddingStyle should render when given standard 1`] = `
<div
  className="flowsheet-result-cell padding-standard"
>
  <div
    className="single-result-display"
    key="ClinicalResultDisplay-111"
  >
    <ClinicalResult
      hasResultError={false}
      hasResultNoData={false}
      hideUnit={false}
      isTruncated={true}
      key="ClinicalResult-111"
      resultData={
        Object {
          "eventId": "111",
          "result": Object {
            "unit": "mL",
            "value": "12345.678",
          },
        }
      }
    />
  </div>
  <div
    className="additional-results-display add-end-accessory-space"
    key="AdditionalResultsDisplay-111"
  >
    <div
      className="additional-results-stack"
    >
      <span
        className="additional-results-value"
      >
        2
      </span>
      <span
        className="additional-results-value"
      >
        2
      </span>
    </div>
  </div>
</div>
`;

exports[`FlowsheetResultCell should pass hideUnit down 1`] = `
<div
  className="flowsheet-result-cell padding-compact"
>
  <div
    className="single-result-display"
    key="ClinicalResultDisplay-111"
  >
    <ClinicalResult
      hasResultError={false}
      hasResultNoData={false}
      hideUnit={true}
      isTruncated={true}
      key="ClinicalResult-111"
      resultData={
        Object {
          "eventId": "111",
          "result": Object {
            "unit": "mL",
            "value": "12345.678",
          },
        }
      }
    />
  </div>
  <div
    className="additional-results-display add-end-accessory-space"
    key="AdditionalResultsDisplay-111"
  >
    <div
      className="additional-results-stack"
    >
      <span
        className="additional-results-value"
      >
        2
      </span>
      <span
        className="additional-results-value"
      >
        2
      </span>
    </div>
  </div>
</div>
`;

exports[`FlowsheetResultCell should render an error when given no result data 1`] = `
<div
  className="flowsheet-result-cell padding-compact"
>
  <div
    className="single-result-display "
    key="ClinicalResultDisplay-Error"
  >
    <ResultError />
  </div>
</div>
`;

exports[`FlowsheetResultCell should render when given result data 1`] = `
<div
  className="flowsheet-result-cell padding-compact"
>
  <div
    className="single-result-display"
    key="ClinicalResultDisplay-111"
  >
    <ClinicalResult
      hasResultError={false}
      hasResultNoData={false}
      hideUnit={false}
      isTruncated={true}
      key="ClinicalResult-111"
      resultData={
        Object {
          "eventId": "111",
          "result": Object {
            "unit": "mL",
            "value": "12345.678",
          },
        }
      }
    />
  </div>
  <div
    className="additional-results-display add-end-accessory-space"
    key="AdditionalResultsDisplay-111"
  >
    <div
      className="additional-results-stack"
    >
      <span
        className="additional-results-value"
      >
        2
      </span>
      <span
        className="additional-results-value"
      >
        2
      </span>
    </div>
  </div>
</div>
`;
